--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "element-ui": "^2.4.2",
     "firebase": "^5.2.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
     "@vue/cli-service": "^3.0.0-beta.15",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
