--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-polyfill": "^6.26.0",
     "element-ui": "^2.4.2",
     "firebase": "^5.2.0",
+    "firebase-admin": "^5.12.1",
     "firebase-functions": "^1.1.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
